--- a/src/main/resources/templates/fragments/config.html
+++ b/src/main/resources/templates/fragments/config.html
@@ -1,45 +1,39 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<head>
     <th:block th:fragment="configFragment">
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+        <!-- Apple Touch Icon -->
+        <link rel="apple-touch-icon" th:href="@{/apple-touch-icon.png}">
 
+        <!-- Stylesheets -->
+        <link rel="stylesheet" th:href="@{/assets/css/iconfont.css}">
+        <link rel="stylesheet" th:href="@{/assets/css/slick/slick.css}">
+        <link rel="stylesheet" th:href="@{/assets/css/slick/slick-theme.css}">
+        <link rel="stylesheet" th:href="@{/assets/css/stylesheet.css}">
+        <link rel="stylesheet" th:href="@{/assets/css/font-awesome.min.css}">
+        <link rel="stylesheet" th:href="@{/assets/css/jquery.fancybox.css}">
+        <link rel="stylesheet" th:href="@{/assets/css/bootstrap.css}">
+        <link rel="stylesheet" th:href="@{/assets/css/bootstrap.min.css}">
+        <link rel="stylesheet" th:href="@{/assets/css/magnific-popup.css}">
+        <link rel="stylesheet" th:href="@{/assets/css/plugins.css}">
+        <link rel="stylesheet" th:href="@{/assets/css/style.css}">
+        <link rel="stylesheet" th:href="@{/assets/css/responsive.css}">
 
-        <link rel="stylesheet" href="assets/css/iconfont.css">
-        <link rel="stylesheet" href="assets/css/slick/slick.css">
-        <link rel="stylesheet" href="assets/css/slick/slick-theme.css">
-        <link rel="stylesheet" href="assets/css/stylesheet.css">
-        <link rel="stylesheet" href="assets/css/font-awesome.min.css">
-        <link rel="stylesheet" href="assets/css/jquery.fancybox.css">
-        <link rel="stylesheet" href="assets/css/bootstrap.css">
-        <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-        <link rel="stylesheet" href="assets/css/magnific-popup.css">
-
-        <!--For Plugins external css-->
-        <link rel="stylesheet" href="assets/css/plugins.css" />
-
-        <!--Theme custom css -->
-        <link rel="stylesheet" href="assets/css/style.css">
-
-        <!--Theme Responsive css-->
-        <link rel="stylesheet" href="assets/css/responsive.css" />
-
-        <script src="assets/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
-
-
-        <script src="assets/js/vendor/jquery-1.11.2.min.js"></script>
-        <script src="assets/js/vendor/bootstrap.min.js"></script>
-
-        <script src="assets/js/jquery.magnific-popup.js"></script>
-        <script src="assets/js/jquery.mixitup.min.js"></script>
-        <script src="assets/js/jquery.easing.1.3.js"></script>
-        <script src="assets/js/jquery.masonry.min.js"></script>
-
-        <!--slick slide js -->
-        <script src="assets/css/slick/slick.js"></script>
-        <script src="assets/css/slick/slick.min.js"></script>
-
-
-        <script src="assets/js/plugins.js"></script>
-        <script src="assets/js/main.js"></script>
+        <!-- JavaScript -->
+        <script th:src="@{/assets/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js}"></script>
+        <script th:src="@{/assets/js/vendor/jquery-1.11.2.min.js}"></script>
+        <script th:src="@{/assets/js/vendor/bootstrap.min.js}"></script>
+        <script th:src="@{/assets/js/jquery.magnific-popup.js}"></script>
+        <script th:src="@{/assets/js/jquery.mixitup.min.js}"></script>
+        <script th:src="@{/assets/js/jquery.easing.1.3.js}"></script>
+        <script th:src="@{/assets/js/jquery.masonry.min.js}"></script>
+        <script th:src="@{/assets/css/slick/slick.js}"></script>
+        <script th:src="@{/assets/css/slick/slick.min.js}"></script>
+        <script th:src="@{/assets/js/plugins.js}"></script>
+        <script th:src="@{/assets/js/main.js}"></script>
     </th:block>
+</head>
+<body>
+<!-- Your content goes here -->
+</body>
 </html>
