--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -20,7 +20,7 @@
                                 <span class="icon-bar"></span>
                             </button>
                             <a class="navbar-brand" href="/main">
-                                <img src="assets/images/seater.png" style="width: 100px;"/>
+                                <img th:src="@{/assets/images/seater.png}" style="width: 100px;"/>
                             </a>
                         </div>
 
@@ -28,7 +28,7 @@
 
                             <ul class="nav navbar-nav navbar-right">
                                 <li><a href="/main">HOME</a></li>
-                                <li><a href="/adminForm">관리자</a></li>
+                                <li><a href="/store/new">가게 정보 입력</a></li>
                                 <li><a href="/login">로그인</a></li>
                             </ul>
 
