--- a/src/main/resources/templates/layout/mainLayout.html
+++ b/src/main/resources/templates/layout/mainLayout.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
-  <th:block th:replace="fragments/config::configFragment"></th:block>
+  <th:block th:replace="~{fragments/config::configFragment}"></th:block>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Bino html5 free Template</title>
@@ -13,7 +13,7 @@
 
 <div class='preloader'><div class='loaded'>&nbsp;</div></div>
 <div class="culmn">
-  <header id="main_menu" class="header navbar-fixed-top" th:replace="fragments/header::headerFragment"></header> <!--End of header -->
+  <header id="main_menu" class="header navbar-fixed-top" th:replace="~{fragments/header::headerFragment}"></header> <!--End of header -->
   <div layout:fragment="content" class="content"></div>
 <!--  <div class="container main-content">-->
 <!--    <div class="row">-->
@@ -37,7 +37,7 @@
 <!--  </div>-->
 
 
-  <section class="footer" th:replace="fragments/footer::footerFragment">
+  <section class="footer" th:replace="~{fragments/footer::footerFragment}">
   </section>
 </div>
 
