--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -29,7 +29,8 @@
                             <ul class="nav navbar-nav navbar-right">
                                 <li><a href="/main">HOME</a></li>
                                 <li><a href="/adminForm">관리자</a></li>
-                                <li><a href="/login">로그인</a></li>
+                                <li><a href="/newLogin">로그인</a></li>
+<!--                                <li th:onclick="|location.href='@{/login}'|">로그인</li>-->
                             </ul>
 
 
