--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -28,7 +28,7 @@
 
                             <ul class="nav navbar-nav navbar-right">
                                 <li><a href="/main">HOME</a></li>
-                                <li><a href="/store/new">가게 정보 입력</a></li>
+                                <li><a href="/store/list">가게 목록</a></li>
                                 <li><a href="/login">로그인</a></li>
                             </ul>
 
