--- a/src/main/resources/templates/store/storeList.html
+++ b/src/main/resources/templates/store/storeList.html
@@ -6,59 +6,17 @@
     <meta charset="UTF-8">
     <title>가게 목록</title>
     <style>
-
         table {
             border-collapse: collapse;
-            border: 0;
+            width: 100%;
         }
-        th,
-        td {
-            border: 1px solid #aaa;
-            background-clip: padding-box;
-            scroll-snap-align: start;
+        th, td {
+            padding: 8px;
+            text-align: center;
+            border-bottom: 1px solid #ddd;
         }
-        tbody tr:last-child th,
-        tbody tr:last-child td {
-            border-bottom: 0;
-        }
-        thead {
-            z-index: 1000;
-            position: relative;
-        }
-        th,
-        td {
-            padding: 0.6rem;
-            min-width: 6rem;
-            text-align: left;
-            margin: 0;
-        }
-        thead th {
-            position: sticky;
-            top: 0;
-            border-top: 0;
-            background-clip: padding-box;
-        }
-        thead th.pin {
-            left: 0;
-            z-index: 1001;
-            border-left: 0;
-        }
-        tbody th {
-            background-clip: padding-box;
-            border-left: 0;
-        }
-        tbody {
-            z-index: 10;
-            position: relative;
-        }
-        tbody th {
-            position: sticky;
-            left: 0;
-        }
-        thead th,
-        tbody th {
-            background-color: #f8f8f8;
-        }
+        tbody tr:hover {background-color: lightgoldenrodyellow;}
+
     </style>
 </head>
 <body>
@@ -67,35 +25,19 @@
         <table>
             <thead>
                 <tr>
+                    <td>id</td>
                     <td>매장명</td>
                     <td>한 줄 설명</td>
-                    <td>매장 소개</td>
-                    <td>전화번호</td>
-                    <td>영업시간</td>
-                    <td>정기휴무</td>
-                    <td>홈페이지</td>
-                    <td>편의시설</td>
-                    <td>예약단위</td>
-                    <td>오픈시간</td>
-                    <td>마감시간</td>
-                    <td>예약금</td>
+                    <td>삭제 여부</td>
                 </tr>
             </thead>
             <tbody>
-            <div th:text="${storeList}"></div>
-                <tr th:each="store : ${storeList}" >
+                <tr th:each="store : ${storeList}"
+                    th:onclick="|location.href='/store/detail/${store.id}'|">
+                    <td th:text="${store.id}"></td>
                     <td th:text="${store.storeName}"></td>
-                    <td th:text="${store.desShot}"></td>
-                    <td th:text="${store.des}"></td>
-                    <td th:text="${store.telNo}"></td>
-                    <td th:text="${store.busiHour}"></td>
-                    <td th:text="${store.regularHoli}"></td>
-                    <td th:text="${store.homepage}"></td>
-                    <td th:text="${store.facilities}"></td>
-                    <td th:text="${store.resvUnit}"></td>
-                    <td th:text="${store.openTime}"></td>
-                    <td th:text="${store.closingTime}"></td>
-                    <td th:text="${store.resvPrice}"></td>
+                    <td th:text="${store.desShort}"></td>
+                    <td th:text="${store.delYn}"></td>
                 </tr>
             </tbody>
         </table>
